--- a/package.json
+++ b/package.json
@@ -7,24 +7,33 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "playwright test"
+    "test": "jest --watchAll",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "@next/font": "13.1.5",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "next": "13.1.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/react": "^18.0.27",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "autoprefixer": "^10.4.13",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "next-router-mock": "^0.9.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   }
 }
